--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ application {
 dependencies {
     // Use JUnit 5
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.hamcrest:hamcrest:2.2' // Needed for hw3
 }
 
 // make the test task use JUnit
